--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
   <body>
     <main>
-        <form action="" method="post">
+        <h1>Get in Touch</h1>
+        <form action="https://formspree.io/f/xeqneyyo" method="post">
             <div>
                 <label for="name">Name:</label>
                 <input
